--- a/blogs.html
+++ b/blogs.html
@@ -292,10 +292,10 @@
     <section class="th-blog-wrapper space-top space-extra-bottom">
         <div class="container">
             <div class="row">
-                <div class="col-xxl-12 col-lg-7">
+                <div class="col-xxl-8 col-lg-7">
                     <div class="th-blog blog-single has-post-thumbnail">
                         <div class="blog-img">
-                            <a href="blog-details.html"><img src="assets/img/blog/group-dogs-cats-looking-sign.jpg.jpg" alt="Blog Image"></a>
+                            <a href="blog-details.html"><img src="assets/img/blog/blog.jpg" alt="Blog Image"></a>
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -311,7 +311,7 @@
                     </div>
                     <div class="th-blog blog-single has-post-thumbnail">
                         <div class="blog-img">
-                            <a href="blog-details.html"><img src="assets/img/blog/Eco Brown.jpg" alt="Blog Image"></a>
+                            <a href="blog-details.html"><img src="assets/img/blog/blog1.png" alt="Blog Image"></a>
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -327,7 +327,7 @@
                     </div>
                     <div class="th-blog blog-single has-post-thumbnail">
                         <div class="blog-img">
-                            <a href="blog-details.html"><img src="assets/img/blog/Eco White.jpg" alt="Blog Image"></a>
+                            <a href="blog-details.html"><img src="assets/img/blog/blog2.jpg" alt="Blog Image"></a>
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -352,14 +352,14 @@
                         </ul>
                     </div>
                 </div>
-                <!-- <div class="col-xxl-4 col-lg-5">
+                <div class="col-xxl-4 col-lg-5">
                     <aside class="sidebar-area">
-                        <div class="widget1 widget widget_search  ">
+                        <!-- <div class="widget1 widget widget_search  ">
                             <form class="search-form">
                                 <input type="text" placeholder="Enter Keyword">
                                 <button type="submit"><i class="far fa-search"></i></button>
                             </form>
-                        </div>
+                        </div> -->
                         <div class="widget1 widget  ">
                             <h3 class="widget_title">Recent Posts</h3>
                             <div class="recent-post-wrap">
@@ -399,7 +399,7 @@
                             </div>
                         </div>
                     </aside>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
