--- a/index.html
+++ b/index.html
@@ -404,35 +404,35 @@
                             <span class="box-heading">Organic Only</span>
                             <h3 class="box-title">Eco-Cleanser <b>Shampo</b></h3>
                             <p class="box-text">30% OFF FOR THIS MONTH</p>
-                            <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
+                            <a href="products.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="offer-block mega-hover" data-bg-color="rgb(181 206 64)">
                         <div class="box-img">
-                            <img class="img-height padd" src="assets/img/product/Neem.png" alt="Image">
+                            <img class="img-height padd" src="assets/img/product/kennal-all-598.png" alt="Image">
                         </div>
                         <span class="h6 box-subtitle">Eco-Friendly : Kennal Wash </span>
                         <div class="box-content" data-border="#D1EDD2">
                             <span class="box-heading">Organic Only</span>
                             <h3 class="box-title">Eco-Cleanser <b>Kenneal Wash</b></h3>
                             <p class="box-text">30% OFF FOR THIS MONTH</p>
-                            <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
+                            <a href="products.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-12">
                     <div class="offer-block offer-block1 mega-hover" data-bg-color="rgb(115 191 215)">
                         <div class="box-img">
-                            <img class="img-height1" src="assets/img/product/ec-soap.png" alt="Image"">
+                            <img class="img-height1" src="assets/img/product/ec-soap.png" alt="Image">
                         </div>
                         <span class="h6 box-subtitle">Eco-Cleanser : Soap</span>
                         <div class="box-content" data-border="#D1EDD2">
                             <span class="box-heading">Organic Only</span>
                             <h3 class="box-title">Eco-Cleanser Pet <b>Soap</b></h3>
                             <p class="box-text">30% OFF FOR THIS MONTH</p>
-                            <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
+                            <a href="products.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -482,7 +482,7 @@
                                 </div>
                                 <div class="choose-feature">
                                     <div class="box-icon">
-                                        <img src="assets/img/icon/choose_feature_4.svg" alt="Icon">
+                                        <img class="filr-invert" src="assets/img/icon/choose_feature_4.svg" alt="Icon">
                                     </div>
                                     <h3 class="box-title">Vet Approved</h3>
                                     <p class="box-text">Safe for all breeds & coat types.</p>
