--- a/products.html
+++ b/products.html
@@ -352,11 +352,11 @@
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <div class="img-box4 mt-0">
-                        <img src="assets/img/product/ec-soap.png" alt="Why" style="height: 430px;">
+                        <img src="assets/img/product/ec-soap-1.png" alt="Why" style="height: 510px;">
                     </div>
                     <div class="justify-content-center d-flex gap-2">
-                        <a href="shop-details.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></a>
-                        <a href="shop-details.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
+                        <a href="soap.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></a>
+                        <a href="soap.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
 
                 </div>
@@ -422,7 +422,7 @@
         </div>
     </section>
 
-    <section class="why-sec3 space scaled-wrapper mt-5" data-bg-src="assets/img/bg/shampoo-bg.png">
+    <section class="why-sec3 space scaled-wrapper mt-5" data-bg-src="assets/img/bg/shampoo.jpg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5 col-md-7">
@@ -466,11 +466,11 @@
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <div class="img-box4 mt-0">
-                        <img src="assets/img/product/ec-shampo.png" alt="Why" style="height: 520px;">
+                        <img src="assets/img/product/ec-shampo.png" alt="Why" style="height: 590px;">
                     </div>
                     <div class="justify-content-center d-flex gap-2">
-                        <a href="shop-details.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></i></a>
-                        <a href="shop-details.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
+                        <a href="shampo.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></i></a>
+                        <a href="shampo.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-auto">
@@ -578,11 +578,11 @@
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <div class="img-box4 mt-0">
-                        <img src="assets/img/product/ec-kennal2.png" alt="Why" style="height: 364px;">
+                        <img src="assets/img/product/kennal-all-2.png" alt="Why" style="width: 648px;">
                     </div>
                     <div class="justify-content-center d-flex gap-2">
-                        <a href="shop-details.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></i></a>
-                        <a href="shop-details.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
+                        <a href="kennal-wash.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></i></a>
+                        <a href="kennal-wash.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-auto">
