--- a/soap.html
+++ b/soap.html
@@ -295,7 +295,7 @@
                 <div class="col-lg-6">
                     <div class="product-big-img">
                         <div class="img"><img src="assets/img/product/ec-soap.png" alt="Product Image"></div>
-                        <div class="img"><img src="assets/img/product/ec-soap1.jpg" alt="Product Image" style="width: 70%;"></div>
+                        <div class="img"><img src="assets/img/product/ec-soap1.png" alt="Product Image" style="width: 70%;"></div>
                     </div>
                 </div>
                 <div class="col-lg-6 align-self-center">
@@ -375,7 +375,7 @@
                         </div>
                         <div class="col-auto d-none d-lg-block">
                             <div class="img-box4 mt-0">
-                                <img src="assets/img/product/ec-soap2.jpg" alt="Why" style="height: 430px;">
+                                <img src="assets/img/product/ec-soap2.png" alt="Why" style="height: 430px;">
                             </div>
                         </div>
                         <div class="col-sm-auto">
@@ -412,20 +412,20 @@
                     </div>
                 </div>
             </section>
-            <ul class="nav product-tab-style1" id="productTab" role="tablist">
+            <!-- <ul class="nav product-tab-style1" id="productTab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link th-btn" id="description-tab" data-bs-toggle="tab" href="#description" role="tab" aria-controls="description" aria-selected="false">Product Description</a>
                 </li>
                 <li class="nav-item" role="presentation">
                     <a class="nav-link th-btn active" id="reviews-tab" data-bs-toggle="tab" href="#reviews" role="tab" aria-controls="reviews" aria-selected="true">Customer Reviews</a>
                 </li>
-            </ul>
-            <div class="tab-content" id="productTabContent">
-                <div class="tab-pane fade" id="description" role="tabpanel" aria-labelledby="description-tab">
+            </ul> -->
+            <div class="" id="">
+                <div class="">
                     <p>Prepare to embark on a sensory journey with the Bosco Apple, a fruit that transcends the ordinary and promises an unparalleled taste experience. These apples are nothing short of nature’s masterpiece, celebrated for their distinctive blend of flavors and their captivating visual allure. Bosco Apples are a revelation for your taste buds. Their impeccable balance of sweetness and tartness creates a complex, layered taste profile that keeps you coming back for more. Each bite is a symphony of sweet and tangy notes, making these apples a gastronomic delight whether enjoyed fresh or as a key ingredient in your favorite culinary creations.</p>
                     <p>The Bosco Apple is not just a fruit; it’s a work of art. Its striking, deep red skin is adorned with intricate speckles, making it a showstopper in the world of fruit aesthetics. Display these apples with pride in your kitchen, and you’ll undoubtedly draw admiration from all who see them. We take our commitment to the environment seriously. Bosco Apples are cultivated on eco-friendly orchards that prioritize sustainable farming practices. You can savor these apples knowing they are grown with respect for the planet, aligning with your values of environmental responsibility. Whether you’re a culinary aficionado or a casual home chef, Bosco Apples offer limitless possibilities in the kitchen. Slice them into a vibrant salad, transform them into mouthwatering pies, or blend them into wholesome applesauce. The culinary canvas is yours to paint with these versatile apples.</p>
                 </div>
-                <div class="tab-pane fade show active" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
+                <div class="mt-5" >
                     <div class="woocommerce-Reviews">
                         <div class="th-comments-wrap ">
                             <ul class="comment-list">
